--- a/_posts/n8n-test1-2025-05-05.md
+++ b/_posts/n8n-test1-2025-05-05.md
@@ -3,7 +3,7 @@ Tools
 chatGPT + API
 n8n
 Creatomate
-fai.ai
+fai.ai (이미지, 나래이션, 이펙트를 제공하는 AI 서비스)
  -recraft.ai
 - elevenaabs - 2.5 turbo
 - elevenlabs - sound effects 
@@ -14,20 +14,20 @@ fai.ai
 
 출력 방식: 
  -코드 블러(') 안에 탭으로 구분된 텍스트를 제공해줘. 
- - 각 행은 Subject, Narration, Status, Caption, Publish 순서로 "||"으로 구분해줘.
+ - 각 행은 Subject, Narration, Status, Caption, Publish 순서로 "|"으로 구분해줘.
  - 헤더 없이 바로 데이터 행만 5개 제공
 
 지침 :
  - subject : 후킹 요소를 넣어 5~7단어 이내로 작성
  - Narration : 30초 분량(60~70단어)의 나래이션
- - Status : 항상 '준비'
+ - Status : 항상 준비으로 넣어줘
  - Caption : 10줄 분량의 심층 부연 설명, 줄 바꿈없이 셀 하나에 들어가도록.
- - -Publish : 항상 '대기중' 
+ - -Publish : 항상 대기중 넣어줘
 
 예시 : 
 판도라의 상자 : 호기심의 대가 그리스 신화 속 판도라는 제우스로부터 절대 열어보지 말라는 상자를 받았습니다.
 하지만 호기심을 이기지 못한 그녀가 상자를 열자, 세상의 모든 재앙과 질병이 쏟아져 나왔죠. 
-마지막에 남은 것은 오직 '희망' 뽄이었습니다. 
+마지막에 남은 것은 오직 '희망' 뿐이었습니다. 
 이 이야기는 인간의 호기심과 그 결과에 대한 책임 그리고 어떤 상황에서도 희망은 남아있다는 메세지를 전합니다.
 준비 판도라의 상자 이야기는 인류의 고통에 대한 그리스인들의 설명이자, 지식과 호기심이 가져올 수 있는 
 양면성에 대한 경고입니다. 제우스는 인간에게 불을 가져다준 프로메테우스에 대한 복수로 판도라와 그녀의
@@ -40,4 +40,38 @@ fai.ai
 2) 엑셀로 옮긴 글 검증
 3) n8n workflow 새로 실행
 4) 메뉴얼 트리거 실행, 구글 쉬트 가져오기로 로그인 설정(구씨 유튜브)
-5) 
+
+
+API Key 받는곳 https://fal.ai
+response=$(curl --request POST 
+  --url https://queue.fal.run/fal-ai/elevenlabs/tts/turbo-v2.5 
+  --header "Authorization: Key $FAL_KEY" 
+  --header "Content-Type: application/json" 
+
+
+나래이션 생성(Text to Voice) 
+Method : POST
+URL : https://queue.fal.run/fal-ai/elevenlabs/tts/turbo-v2.5
+
+fal-ai/elevenlabs/tts/turbo-v2.5
+
+fal-ai/elevenlabs/tts/turbo-v2.5
+
+Header1 : 
+Name : Authorization 
+Value : Key $API_KEY
+
+Header2 : 
+Name : Content-Type 
+Value : application/json
+
+JSON : 
+{
+"text": "{{ $json.Narration }}",
+"language_code": "ko"
+}
+※ 본문에 ""가 들어가 있으면, JSON 에러 발생
+
+
+
+
