--- a/_posts/n8n-test1-2025-05-05.md
+++ b/_posts/n8n-test1-2025-05-05.md
@@ -72,6 +72,49 @@ JSON :
 }
 ※ 본문에 ""가 들어가 있으면, JSON 에러 발생
 
+이미지 생성을 위한 프롬프트 만들기 
+주어진 스크립트에 따라 매우 몰입감 있고 영화적인 장면 프롬프트를 5장 생성해 주세요.
 
+요구사항 :
+1. 생생하고 감각적인 동작 중심 묘사를 사용할 것(예: 움켜잡다. 밀치다. 달리다. 쓰러지다 등)
+2. 스크립트에 따라 논리적인 순서로 전개될 것
+3. 평범한 일상보다는 독특하고 극적이며 시각적으로 강렬한 장면 위주로 구성할 것
+4. 몰입감을 높이기 위해 시네마틱 샷 등의 키워드를 포함할 것
+5. 각 프롬프트는 200자 이내로 상세하게 작성
+6 큰따옴표("")는 사용하지 않음
+7. 프롬프트는 영어로 생성함.
+
+예시:
+Cinematic low-angle shot of Hercules collapsing to one knee in a rain-soaked temple,
+his fists trembling as divine energy flickers out, thunder cracking behind shattered marble pillars
+
+스크립트:
+{{ $('Google Sheets').item.json.Narration }}
+
+
+
+이미지 생성(Recraft)
+Method POST
+URL : https://queue.fal.run/fal-ai-recraft-v3
+
+Header1:
+Name : Authorization 
+Value : Key $API_KEY
+
+Header2 : 
+Name : Content-Type 
+Value : application/json
+
+
+JSON:
+{
+"prompt":"{{ $json.text }}", 
+"image_size": "portrait_16_9",
+"style": "digital_illustration/neon_calm"
+}
+
+이미지 주소 가져오기 
+Method GET
+URL : https://queue.fal.run/fal-ai/recraft-v3/requests/{{ $json.request_id }}
 
 
