--- a/_posts/n8n-test1-2025-05-05.md
+++ b/_posts/n8n-test1-2025-05-05.md
@@ -95,7 +95,7 @@ his fists trembling as divine energy flickers out, thunder cracking behind shatt
 
 이미지 생성(Recraft)
 Method POST
-URL : https://queue.fal.run/fal-ai-recraft-v3
+URL :https://queue.fal.run/fal-ai/recraft/v3/text-to-image
 
 Header1:
 Name : Authorization 
@@ -115,6 +115,371 @@ JSON:
 
 이미지 주소 가져오기 
 Method GET
-URL : https://queue.fal.run/fal-ai/recraft-v3/requests/{{ $json.request_id }}
+URL : https://queue.fal.run/fal-ai/recraft/requests/{{ $json.request_id }} 
 
+영상 만들기(kling)
+Method POST
+URL :https://queue.fal.run/fal-ai/recraft/v3/text-to-image
+
+Header1:
+Name : Authorization 
+Value : Key $API_KEY
+
+Header2 : 
+Name : Content-Type 
+Value : application/json
+
+
+JSON:
+{
+"prompt":"{{ $json.text }}", 
+"image_size": "portrait_16_9",
+"style": "digital_illustration/neon_calm"
+}
+
+이미지 주소 가져오기 
+Method GET
+URL : https://queue.fal.run/fal-ai/recraft/requests/{{ $json.request_id }})
+
+
+
+영상 만들기
+
+Method POST
+URL : https://queue.fal.run/fal-ai/kling-video/v1.6/standard/image-to-video
+
+Header1:
+Name : Authorization 
+Value : Key $API_KEY
+
+Header2 : 
+Name : Content-Type 
+Value : application/json
+
+
+JSON:
+{
+"prompt":"{{ $('Image Prompt').item.json.text }}", 
+"image_url": "{{ $json.image[0].url }}",
+"duration": "5",
+"aspect_ratio": "9:16",
+"negative_prompt": "blur,distort, and low quality"
+}
+
+이미지 주소 가져오기 
+Method GET
+URL : https://queue.fal.run/fal-ai/kling-video/requests/{{ $json.request_id }} 
+
+
+효과음 생성 프롬프트
+
+이미지 프롬프트에 어울리는 효과음을 생성해주세요. 
+
+요구사항 : 
+1. 결과물은 영어로 5~10 단어로 간결하게 생성할 것
+2. 큰따옴표(" ")는 사용하지 않음
+3. 사람의 목소리가 생성될 가능성이 있는 프롬프트가 나와서는 안됨
+4. 프롬프트는 영어로 생성함
+5. only plain text
+
+예시:
+A howling desert wind sweeping across the dunes
+
+이미지 프롬프트 :
+
+
+
+사운드 이펙트 만들기
+
+Method POST
+URL : https://queue.fal.run/fal-ai/elevenlabs/sound-effects
+
+Header1:
+Name : Authorization 
+Value : Key $API_KEY
+
+Header2 : 
+Name : Content-Type 
+Value : application/json
+
+
+JSON:
+{
+"text": "{{ $json.text }}",
+"duration_seconds": "5"
+}
+
+GET
+https://queue.fal.run/fal-ai/elevenlabs/requests/{{ $json.request_id }} 
+
+
+
+
+{
+  "output_format": "mp4",
+  "width": 1080,
+  "height": 1920,
+  "frame_rate": "30 fps",
+  "snapshot_time": 3.5,
+  "fonts": [
+    {
+      "family": "Pretendard",
+      "weight": 700,
+      "style": "normal",
+      "source": "9f3bf16d-9b5a-4a02-89ec-e3ab08a2d053"
+    }
+  ],
+  "elements": [
+    {
+      "id": "b7a7fa0f-913d-4618-8f9b-544e4a10e023",
+      "name": "Narration",
+      "type": "audio",
+      "track": 1,
+      "time": 0,
+      "duration": null,
+      "audio_fade_out": 0,
+      "dynamic": true
+    },
+    {
+      "id": "82f45c55-41fa-4941-9e6c-b",
+      "name": "Composition-1",
+      "type": "composition",
+      "track": 2,
+      "duration": 5,
+      "elements": [
+        {
+          "id": "069ab77c-c712-4dcb-97",
+          "name": "Sound-Effect-1-1",
+          "type": "audio",
+          "track": 1,
+          "time": 0,
+          "volume": "30%",
+          "dynamic": true
+        }
+      ]
+    },
+    {
+      "id": "ec97a518-7e6f-4eb0-9239-bf0851e6cdac",
+      "name": "Video-1",
+      "type": "video",
+      "track": 3,
+      "time": 0,
+      "duration": null,
+      "source": "c74e6e61-6af3-40c0-8187-679d94bca81a",
+      "volume": "120%",
+      "dynamic": true,
+      "animations": [
+        {
+          "easing": "linear",
+          "type": "scale",
+          "fade": false,
+          "track": 0,
+          "end_scale": "120%",
+          "start_scale": "100%"
+        }
+      ]
+    },
+    {
+      "id": "82f45c55-41fa-4941-9e6c-b",
+      "name": "Composition-2",
+      "type": "composition",
+      "track": 2,
+      "duration": 5,
+      "elements": [
+        {
+          "id": "069ab77c-c712-4dcb-97",
+          "name": "Sound-Effect-2-1",
+          "type": "audio",
+          "track": 1,
+          "time": 0,
+          "volume": "30%",
+          "dynamic": true
+        }
+      ]
+    },
+    {
+      "id": "ec97a518-7e6f-4eb0-9239-bf0851e6cdac",
+      "name": "Video-2",
+      "type": "video",
+      "track": 3,
+      "time": 0,
+      "duration": null,
+      "source": "c74e6e61-6af3-40c0-8187-679d94bca81a",
+      "volume": "120%",
+      "dynamic": true,
+      "animations": [
+        {
+          "easing": "linear",
+          "type": "scale",
+          "fade": false,
+          "track": 0,
+          "end_scale": "120%",
+          "start_scale": "100%"
+        }
+      ]
+    },
+    {
+      "id": "82f45c55-41fa-4941-9e6c-b",
+      "name": "Composition-3",
+      "type": "composition",
+      "track": 2,
+      "duration": 5,
+      "elements": [
+        {
+          "id": "069ab77c-c712-4dcb-97",
+          "name": "Sound-Effect-3-1",
+          "type": "audio",
+          "track": 1,
+          "time": 0,
+          "volume": "30%",
+          "dynamic": true
+        }
+      ]
+    },
+    {
+      "id": "ec97a518-7e6f-4eb0-9239-bf0851e6cdac",
+      "name": "Video-3",
+      "type": "video",
+      "track": 3,
+      "time": 0,
+      "duration": null,
+      "source": "c74e6e61-6af3-40c0-8187-679d94bca81a",
+      "volume": "120%",
+      "dynamic": true,
+      "animations": [
+        {
+          "easing": "linear",
+          "type": "scale",
+          "fade": false,
+          "track": 0,
+          "end_scale": "120%",
+          "start_scale": "100%"
+        }
+      ]
+    },
+    {
+      "id": "82f45c55-41fa-4941-9e6c-b",
+      "name": "Composition-4",
+      "type": "composition",
+      "track": 2,
+      "duration": 5,
+      "elements": [
+        {
+          "id": "069ab77c-c712-4dcb-97",
+          "name": "Sound-Effect-4-1",
+          "type": "audio",
+          "track": 1,
+          "time": 0,
+          "volume": "30%",
+          "dynamic": true
+        }
+      ]
+    },
+    {
+      "id": "ec97a518-7e6f-4eb0-9239-bf0851e6cdac",
+      "name": "Video-4",
+      "type": "video",
+      "track": 3,
+      "time": 0,
+      "duration": null,
+      "source": "c74e6e61-6af3-40c0-8187-679d94bca81a",
+      "volume": "120%",
+      "dynamic": true,
+      "animations": [
+        {
+          "easing": "linear",
+          "type": "scale",
+          "fade": false,
+          "track": 0,
+          "end_scale": "120%",
+          "start_scale": "100%"
+        }
+      ]
+    },
+    {
+      "id": "82f45c55-41fa-4941-9e6c-b",
+      "name": "Composition-5",
+      "type": "composition",
+      "track": 2,
+      "duration": 5,
+      "elements": [
+        {
+          "id": "069ab77c-c712-4dcb-97",
+          "name": "Sound-Effect-5-1",
+          "type": "audio",
+          "track": 1,
+          "time": 0,
+          "volume": "30%",
+          "dynamic": true
+        }
+      ]
+    },
+    {
+      "id": "ec97a518-7e6f-4eb0-9239-bf0851e6cdac",
+      "name": "Video-5",
+      "type": "video",
+      "track": 3,
+      "time": 0,
+      "duration": null,
+      "source": "c74e6e61-6af3-40c0-8187-679d94bca81a",
+      "volume": "120%",
+      "dynamic": true,
+      "animations": [
+        {
+          "easing": "linear",
+          "type": "scale",
+          "fade": false,
+          "track": 0,
+          "end_scale": "120%",
+          "start_scale": "100%"
+        }
+      ]
+    },
+    {
+      "id": "69498239-840c-4fdd-ad40-17c9d1b0fa85",
+      "name": "Subtitles",
+      "type": "text",
+      "track": 3,
+      "time": 0,
+      "y": "82%",
+      "width": "82%",
+      "height": "35%",
+      "x_alignment": "50%",
+      "y_alignment": "50%",
+      "font_family": "Pretendard",
+      "font_weight": "700",
+      "font_size": "5.6 vmin",
+      "background_color": "rgba(216,216,216,0)",
+      "background_x_padding": "31%",
+      "background_y_padding": "17%",
+      "background_border_radius": "31%",
+      "transcript_source": "Narration",
+      "transcript_effect": "slide",
+      "transcript_split": "line",
+      "transcript_placement": "animate",
+      "transcript_maximum_length": 14,
+      "transcript_color": "#ffffff",
+      "fill_color": "#ffffff",
+      "stroke_color": "#000000",
+      "stroke_width": "1 vmin"
+    },
+    {
+      "id": "3a993a11-02c0-4cb4-9878-f4647ae6ab54",
+      "name": "Outro",
+      "type": "text",
+      "track": 4,
+      "time": 25.0127,
+      "duration": 4.9998,
+      "width": "82%",
+      "height": "35%",
+      "x_alignment": "50%",
+      "y_alignment": "50%",
+      "text": "자세한 이야기는\nn캡션에 적어두었어요 🔍",
+      "font_family": "Open Sans",
+      "font_weight": "700",
+      "font_size": "5.6 vmin",
+      "fill_color": "#ffffff"
+    }
+  ]
+}
 
